# temporal-graph-dataset

./: .gitignore  Makefile  README.md  dgemm.py  linkpredictor.py  pyproject.toml  sample_code.py  setup.py
temporal_graph/: __init__.py  available_datasets.toml  base.py  flight.py  loader.py  p_dblp.py  p_enron.py  p_flight.py  stat.py  tg.py  utils.py
temporal_graph/preprocess/: p_GDELTLite.py  p_coin.py  p_dblp.py  p_dblp_v2.py  p_dblp_year.py  p_enron.py  p_flight.py  pseudo.py
