[tool.poetry]
name = "ntust-tg"
version = "0.1"
description = "Temporal Graph Datasets for PyTorch Geometric"
authors = ["Hsiang-Jen Li <hsiangjenli@gmail.com>"]
readme = "README.md"
packages = [{include = "temporal_graph"}]

[tool.poetry.dependencies]
python = "^3.8"
torch-geometric = "^2.3.0"
tqdm = "^4.65.0"
clint = "^0.5.1"
requests = "^2.28.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
gdown = "4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200

[tool.ruff.format]
docstring-code-line-length = 120
indent-style = "tab"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = true